Добавил  кнопку и id на price-section

--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,4 +1,4 @@
-<section class="price-section">
+<section class="price-section" id="price">
   <div class="container">
     <p class="price-text">Проведи время в компании лучших мастеров</p>
     <h2 class="price-title title">Услуги и цены</h2>
