--- a/src/sass/layout/_price.scss
+++ b/src/sass/layout/_price.scss
@@ -89,6 +89,26 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding: 12px 20px;
+  margin-top: 44px;
+  border-radius: 25px;
+  min-width: 160px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #ff6c00;
+  cursor: pointer;
+  outline: none;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
 @media screen and (min-width: 768px) {
