--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -85,8 +85,8 @@ body {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 @media screen and (min-width: 320px) {
@@ -98,26 +98,52 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
 .title {
-  margin-bottom: 20px;
   font-weight: 700;
-  font-size: 28px;
-  line-height: 1.178;
+  font-size: 42px;
+  line-height: 1.166;
   letter-spacing: 0.05em;
+}
+
+.title.dark-theme-title {
+  color: var(--white-color);
+  margin-bottom: 44px;
+}
+
+.title.light-theme-title {
+  margin-bottom: 20px;
   color: var(--secondary-text-color);
 }
 
-@media screen and (min-width: 1200px) {
-  .title {
+.title.footer-title {
+  margin-bottom: 40px;
+  text-align: center;
+  color: var(--white-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .title.about-title {
+    font-size: 28px;
+    line-height: 1.178;
+    color: var(--secondary-text-color);
+  }
+}
+
+@media screen and (max-width: 1199px) and (min-width: 1200px) {
+  .title.about-title {
     font-size: 42px;
     line-height: 1.166;
   }
@@ -151,6 +177,20 @@ body {
   margin-right: 20px;
   vertical-align: middle;
   background: var(--additional-text-color);
+}
+
+.suptitle.gallery-suptitle {
+  margin-bottom: 44px;
+}
+
+.suptitle.suptitle-footer {
+  color: var(--white-color);
+}
+
+@media screen and (max-width: 767px) {
+  .suptitle.gallery-suptitle {
+    line-height: 1.909;
+  }
 }
 
 .btn {
@@ -213,18 +253,6 @@ body {
 
 .about-title {
   margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 1.178;
-  letter-spacing: 0.05em;
-  color: var(--secondary-text-color);
-}
-
-@media screen and (min-width: 1200px) {
-  .about-title {
-    font-size: 42px;
-    line-height: 1.166;
-  }
 }
 
 .second-text {
