Добавил transition на кнопку

--- a/src/sass/layout/_price.scss
+++ b/src/sass/layout/_price.scss
@@ -109,6 +109,7 @@
   &:focus {
     background-color: var(--accent-color);
   }
+  transition: background-color 250ms linear;
 }
 
 @media screen and (min-width: 768px) {
