done all about problems, i hope

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section id="about" class="about">
   <div class="container about-wrapper">
     <div class="about-left-side">
       <ul class="about-list list">
@@ -99,7 +99,9 @@
         волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам
         приходит!
       </p>
-      <button class="about-button">онлайн-запись</button>
+      <button class="about-button modal-button modal-button-white">
+        онлайн-запись
+      </button>
     </div>
   </div>
 </section>
