--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -8,52 +8,52 @@
   }
 }
 
-.about-text {
-  position: relative;
-  margin-bottom: 20px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 15px;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  padding-left: 80px;
+.about {
+  &-text {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #303030;
 
-  color: #303030;
-}
+    &::before {
+      display: inline-block;
+      margin-right: 20px;
+      content: '';
+      width: 60px;
+      height: 1px;
+      background-color: #303030;
+    }
+  }
 
-.about-text::before {
-  display: block;
-  position: absolute;
-  content: '';
-  width: 60px;
-  height: 1px;
-  background-color: #303030;
-  top: 50%;
-  left: 0;
-}
+  &-headline {
+    font-size: 28px;
+    line-height: 1.178;
+    margin-bottom: 20px;
+  }
 
-.about-headline {
-  font-size: 28px;
-  line-height: 1.178;
-  margin-bottom: 20px;
-}
-.about-description {
-  margin-bottom: 20px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.625;
-  letter-spacing: 0.02em;
-  color: #555555;
-}
+  &-description {
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.625;
+    letter-spacing: 0.02em;
+    color: #555555;
 
-.about-description-text {
-  margin-bottom: 40px;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.857;
-  letter-spacing: 0.02em;
-  color: #555555;
+    &-text {
+      margin-bottom: 40px;
+      font-style: normal;
+      font-size: 14px;
+      line-height: 1.857;
+      letter-spacing: 0.02em;
+      color: #555555;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -105,6 +105,40 @@
     }
     &-second-list {
       padding: 0 35px 0 45px;
+    }
+  }
+}
+
+.modal-button {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 12px 20px;
+  border-radius: 25px;
+  min-width: 160px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #ff6c00;
+  transition: background-color 250ms linear;
+  cursor: pointer;
+  outline: none;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+
+  &-white {
+    color: #303030;
+    transition: color 250ms linear;
+    &:hover,
+    &:focus {
+      color: #ffffff;
     }
   }
 }
