--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,20 +1,25 @@
 <section class="section advantages-section">
+    <p>старая традиционная школа</p>
+    <div>
+        <h2>Почему приходят именно к нам?</h2>
+        <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+    </div>
   <div>
     <ul class="advantages-list">
       <li class="advantages-item">
-        <span> </span>
+        <span>600</span>
         <p class="advantages-item-text">Довольных клиентов в день</p>
       </li>
       <li class="advantages-item">
-        <span> </span>
+        <span>50</span>
         <p class="advantages-item-text">Наград за отличный сервис</p>
       </li>
       <li class="advantages-item">
-        <span> </span>
+        <span>20</span>
         <p class="advantages-item-text">Лучших мастеров Киева</p>
       </li>
       <li class="advantages-item">
-        <span> </span>
+        <span>100</span>
         <p class="advantages-item-text">Подарков постоянным клиентам</p>
       </li class="advantages-item">
     </ul>
