--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,46 +1,46 @@
-<div class="contact-wrapper">
+<div class="contact-wrapper" id="contacts">
   <section class="container contact-form">
     <form action="#" class="form-field">
       <h2 class="contact-form-title title">Онлайн-запись</h2>
       <div class="contact-input-wrapper">
         <div class="contacts-input-wrapper">
           <label for="" class="contact-form-field"
-            ><span class="contact-form-field-item">Имя*</span>
+            ><span class="contact-form-field-item"></span>
             <input
               class="contacts-input"
               type="text"
               name="name"
               id="name"
               minlength="2"
-              placeholder=""
+              placeholder="Имя*"
             />
           </label>
         </div>
 
         <div class="contacts-input-wrapper">
           <label for="" class="contact-form-field"
-            ><span class="contact-form-field-item">Телефон*</span>
+            ><span class="contact-form-field-item"></span>
             <input
               class="contacts-input"
               type="tel"
               name="tel"
               id="tel"
               pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              placeholder=""
+              placeholder="Телефон*"
             />
           </label>
         </div>
       </div>
 
       <label for="" class="contact-form-field"
-        ><span class="contact-form-field-item">сообщение</span>
+        ><span class="contact-form-field-item"></span>
         <textarea
           class="contacts-input contacts-input-message"
           name=""
           id=""
           cols=""
           rows=""
-          placeholder=""
+          placeholder="сообщение"
         ></textarea>
       </label>
       <button class="send-button" type="submit">отправить</button>
