--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -36,8 +36,11 @@
   margin-bottom: 44px;
   // outline: 1px solid red;
   transition: border-bottom-color 250ms linear;
+  cursor: pointer;
+
   &::placeholder {
     color: rgba(157, 164, 189, 0.4);
+    transition: color 250ms linear;
   }
   &:focus::placeholder,
   &:hover::placeholder {
