--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,4 +1,4 @@
-<section class="team-section">
+<section class="team-section" id="team">
   <div class="container">
     <p class="team-section-suptitle">для настоящих ценителей атмосферы</p>
     <h2 class="team-section-title title">Наши мастера</h2>
