--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -13,14 +13,14 @@
   text-transform: uppercase;
   color: #303030;
   margin-bottom: 20px;
-}
-.team-section-suptitle::before {
-  display: inline-block;
-  content: '';
-  width: 60px;
-  height: 1px;
-  margin-right: 20px;
-  background: #303030;
+  &::before {
+    display: inline-block;
+    content: '';
+    width: 60px;
+    height: 1px;
+    margin-right: 20px;
+    background: #303030;
+  }
 }
 .team-section-title {
   padding-bottom: 44px;
