--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,4 @@
-<div class="mobile-menu is-menu-hidden" data-menu>
+<div class="mobile-menu is-open" data-menu>
 
     <button type="button" class="mobile-menu-close-btn" data-menu-close>
         <svg class="mobile-menu-close-icon">
