--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -12,22 +12,17 @@
   box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04), -2px 0px 4px rgba(0, 0, 0, 0.08),
     -1px 0px 3px rgba(0, 0, 0, 0.16);
   transform: translateX(0);
-}
-
-.mobile-menu.is-menu-hidden {
-  transform: translateX(100%);
-}
-.mobile-menu * {
-  opacity: 1;
-  pointer-events: auto;
-  visibility: visible;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
-.mobile-menu.is-menu-hidden * {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+  transform: translateX(100%);
 }
 
 .mobile-menu-close-btn {
