--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -11,19 +11,39 @@
     <div class="advantages-left-side">
       <ul class="advantages-list list">
         <li class="advantages-list-item">
-          <p class="advantages-list-count">600</p>
+          <p class="advantages-list-count">
+            600
+            <svg class="advantages-list-count-icon">
+              <use href="./images/sprite.svg#icon-plus"></use>
+            </svg>
+          </p>
           <p class="advantages-list-description">Довольных клиентов в день</p>
         </li>
         <li class="advantages-list-item">
-          <p class="advantages-list-count">50</p>
+          <p class="advantages-list-count">
+            50
+            <svg class="advantages-list-count-icon">
+              <use href="./images/sprite.svg#icon-plus"></use>
+            </svg>
+          </p>
           <p class="advantages-list-description">Наград за отличный сервис</p>
         </li>
         <li class="advantages-list-item">
-          <p class="advantages-list-count">20</p>
+          <p class="advantages-list-count">
+            20
+            <svg class="advantages-list-count-icon">
+              <use href="./images/sprite.svg#icon-plus"></use>
+            </svg>
+          </p>
           <p class="advantages-list-description">Лучших мастеров Киева</p>
         </li>
         <li class="advantages-list-item">
-          <p class="advantages-list-count">100</p>
+          <p class="advantages-list-count">
+            100
+            <svg class="advantages-list-count-icon">
+              <use href="./images/sprite.svg#icon-plus"></use>
+            </svg>
+          </p>
           <p class="advantages-list-description">
             Подарков постоянным клиентам
           </p>
