--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -39,6 +39,7 @@
     align-items: flex-start;
 
     &-item {
+      text-align: center;
       width: 194px;
       min-height: 133px;
       padding: 20px 36px;
@@ -53,6 +54,8 @@
     }
 
     &-count {
+      position: relative;
+      display: inline-block;
       font-weight: bold;
       font-size: 42px;
       line-height: 1.357;
@@ -128,4 +131,13 @@
       }
     }
   }
+}
+
+.advantages-list-count-icon {
+  position: absolute;
+  top: 10px;
+  right: -16px;
+  width: 13px;
+  height: 22px;
+  fill: #ff6c00;
 }
