--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,12 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './layout/header/header';
+@import './layout/header/section-hero';
+@import './layout/index/section-product';
+@import './layout/index/section-tradition';
+@import './layout/index/section-composition';
+@import './layout/index/section-slider';
+@import './layout/index/section-location';
+@import './footer/index/section-contacts';
+@import '/footer/footer';
