Готовый header для десктоп таблет и телефон

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -41,7 +41,7 @@
                 font-weight: 600;
                 line-height: 1.333;
                 letter-spacing: 0.01em;
-                color: var(--primary-text-color);
+                color: var(--white-color);
 
                 display: flex;
                 align-items: center;
@@ -49,10 +49,17 @@
                     &:focus,
                     &:hover{
                         color: var(--accent-color);
+
+                     & .icon-mail,
+                        .icon-tel{
+                            stroke: var(--accent-color);
+                        }
                     }
 
-                & .icon-mail{
-                    fill: silver;
+                & .icon-mail,
+                .icon-tel{
+                    fill: none;
+                    stroke: #9DA4BD;
                     margin-right: 10px;
                 }    
                }
