--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -7,6 +7,8 @@
   
     @include for-size(phone) {
       width: 320px;
+      padding-right: 20px;
+      padding-left: 20px;
     }
     @include for-size(tablet) {
       width: 768px;
