Добавил дата-меню-опен в бургер

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -44,14 +44,14 @@
                     </li>
                 </ul>    
 
-                <button class="burger">
+                <button class="burger" data-menu-open>
                     <svg class="icon-burger" width="40" height="40">
                         <use href="./images/logo/sprite.svg#icon-burger"></use>
                     </svg>
                 </button>
             </nav>
 
-            <button class="btn" data-menu-open>Онлайн-запись</button>
+            <button class="btn" data-modal-open>Онлайн-запись</button>
         </div>
         </div>      
     </div>  
