added code to section advantages

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,27 +1,39 @@
 <section class="section advantages-section">
-    <p>старая традиционная школа</p>
-    <div>
-        <h2>Почему приходят именно к нам?</h2>
-        <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+  <div class="advantages-container">
+    <div class="container advantages-description">
+      <p class="suptitle">старая традиционная школа</p>
+        <h2 class="title advantages-title">Почему приходят именно к нам?</h2>
+        <p class="advantages-text">О нас говорят только хорошее. Но лучше 
+          1 раз увидеть и прочувствовать, чем 10 раз
+           прочитать.</p>
     </div>
-  <div>
-    <ul class="advantages-list">
+  <div class="container advantages-decoration">
+    <ul class="list advantages-list">
       <li class="advantages-item">
-        <span>600</span>
+        <span class="advantages-number">600 <svg class="plus-icon">
+          <use href="./img/sprite.svg#plus-icon" ></use>
+        </svg> </span>
         <p class="advantages-item-text">Довольных клиентов в день</p>
       </li>
       <li class="advantages-item">
-        <span>50</span>
+        <span class="advantages-number">50 <svg>
+          <use class="plus-icon"></use>
+        </svg> </span>
         <p class="advantages-item-text">Наград за отличный сервис</p>
       </li>
       <li class="advantages-item">
-        <span>20</span>
+        <span class="advantages-number">20 <svg>
+          <use class="plus-icon"></use>
+        </svg> </span>
         <p class="advantages-item-text">Лучших мастеров Киева</p>
       </li>
       <li class="advantages-item">
-        <span>100</span>
+        <span class="advantages-number">100 <svg>
+          <use class="plus-icon"></use>
+        </svg> </span>
         <p class="advantages-item-text">Подарков постоянным клиентам</p>
       </li class="advantages-item">
     </ul>
+  </div>
   </div>
 </section>
