правки в мобильное меню

--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,5 +1,7 @@
 .mobile-menu {
   position: fixed;
+  top: 0;
+  right: 0;
   z-index: 100;
   padding-top: 117.5px;
   padding-left: 40px;
@@ -11,7 +13,7 @@
   background-color: var(--white-color);
   box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04), -2px 0px 4px rgba(0, 0, 0, 0.08),
     -1px 0px 3px rgba(0, 0, 0, 0.16);
-  transform: translateX(0);
+  transform: translateX(100%);
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
@@ -22,7 +24,7 @@
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
-  transform: translateX(100%);
+  transform: translateX(0);
 }
 
 .mobile-menu-close-btn {
