--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -16,19 +16,19 @@
         <p class="advantages-item-text">Довольных клиентов в день</p>
       </li>
       <li class="advantages-item">
-        <span class="advantages-number">50 <svg>
+        <span class="advantages-number">50 <svg class="plus-icon">
           <use class="plus-icon"></use>
         </svg> </span>
         <p class="advantages-item-text">Наград за отличный сервис</p>
       </li>
       <li class="advantages-item">
-        <span class="advantages-number">20 <svg>
+        <span class="advantages-number">20 <svg class="plus-icon">
           <use class="plus-icon"></use>
         </svg> </span>
         <p class="advantages-item-text">Лучших мастеров Киева</p>
       </li>
       <li class="advantages-item">
-        <span class="advantages-number">100 <svg>
+        <span class="advantages-number">100 <svg class="plus-icon">
           <use class="plus-icon"></use>
         </svg> </span>
         <p class="advantages-item-text">Подарков постоянным клиентам</p>
