--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,4 +1,10 @@
 .advantages {
+  &-container {
+    @media screen and(min-width:1200px) {
+      display: flex;
+      flex-direction: row-reverse;
+    }
+  }
   &-description {
     margin-bottom: 44px;
   }
@@ -17,7 +23,7 @@
     line-height: 30px;
   }
   &-decoration {
-    max-width: 450px;
+    max-width: 550px;
     @media screen and(min-width:768px) {
       margin-left: auto;
     }
@@ -58,4 +64,7 @@
 
     color: var(--secondary-text-color);
   }
+}
+.plus-icon {
+  position: absolute;
 }
