--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,3 @@
-
 .btn {
   display: block;
   padding: 12px 20px;
@@ -29,22 +28,23 @@
   color: var(--white-color);
 }
 
-
-@media screen and (max-width:767px){
-  .btn{
-   display: none;
-  } 
+@media screen and (max-width: 767px) {
+  .header {
+    & .btn {
+      display: none;
+    }
+  }
 }
 
-@media screen and(min-width:320px){
-  .burger{
+@media screen and(min-width:320px) {
+  .burger {
     border: none;
     background: transparent;
     padding: 0;
   }
 }
-@media screen and(min-width:768px){
-  .burger{
+@media screen and(min-width:768px) {
+  .burger {
     display: none;
   }
 }
