--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './base/fonts';
 @import './layout/header/header';
 @import './layout/header/section-hero';
 @import './layout/index/section-product';
@@ -14,3 +14,4 @@
 @import './layout/index/section-location';
 @import './footer/index/section-contacts';
 @import '/footer/footer';
+@import './example';
