добавила артибут для открытия модального окна

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -24,7 +24,7 @@
 
     <a href="tel:+380441111111" class="tel-link link">+38 044 111 11 11</a>
 
-    <button type="button" class="btn">онлайн-запись</button>
+    <button type="button" class="btn" data-modal-open>онлайн-запись</button>
 
     <ul class="social-list list">
         <li class="social-list-item">
