--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -32,6 +32,8 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="btn dark-theme-btn">онлайн-запись</button>
+    <button type="button" class="btn dark-theme-btn" data-modal-open>
+      онлайн-запись
+    </button>
   </div>
 </section>
