--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="hero-left-box">
-            <ul class="social-list-item">
+            <ul class="social-list-item list">
                 <li class="social-link">
                     <a href="" class="social-link"></a>
                 </li>
@@ -13,15 +13,18 @@
         </div>
 
 
-        <div class="slick-slider">
-            <div>
-                <img src="./img/hero/hero-desktop/hero-desktop-01.jpg" alt="">
-            </div>
-            <div>
-                <img src="./img/hero/hero-desktop/hero-desktop-02.jpg" alt="">
-            </div>
-            <div>
-                <img src="./img/hero/hero-desktop/hero-desktop-03.jpg" alt="">
+            <div class="hero-rigth-box">
+
+            <div class="slick-slider">
+                <div>
+                    <img src="./img/hero/hero-desktop/hero-desktop-01.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./img/hero/hero-desktop/hero-desktop-02.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./img/hero/hero-desktop/hero-desktop-03.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>    
