--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -50,7 +50,7 @@
           &:hover {
             color: var(--accent-color);
 
-            & .icon-mail,
+             .icon-mail,
             .icon-tel {
               stroke: var(--accent-color);
             }
