--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -17,7 +17,7 @@
         margin-left: 64px;
         margin-right: auto;
 
-        & .list-menu-item{
+        & .ulist-men-item{
 
             &:not(:first-child){
             margin-left: 24px;
@@ -34,7 +34,6 @@
                 &:hover{
                     color: var(--accent-color);
                 }
-            }
         }
     }
 }
@@ -56,4 +55,5 @@
         }
     
         
+}
 }
