--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -1,12 +1,47 @@
-<div class="backdrop" data-modal>
+<div class="backdrop is-hidden" data-modal>
     <div class="modal-window">
         <button type="button" class="modal-window-close-btn" data-modal-close></button>
         <svg class="modal-window-close-icon">
             <use href="./img/sprite.svg#icon-close"></use>
         </svg>
-        <h2 class="modal-window-title">
-            Оставьте свои данные, мы вам перезвоним
-        </h2>
+        <form class="modal-form">
+            <h2 class="modal-window-title">
+                Оставьте свои данные, мы вам перезвоним
+            </h2>
+            <label for="name" class="label">Имя</label>
+            <div class="modal-form-item">
+                <input type="text" name="user-name" id="name" class="input">
+                <svg class="modal-form-icon">
+                    <use href="./img/sprite.svg#person"></use>
+                </svg>
+            </div>
+
+            <label for="tel" class="label">Телефон</label>
+            <div class="modal-form-item">
+                <input type="tel" name="tel" id="tel" class="input">
+                <svg class="modal-form-icon">
+                    <use href="./img/sprite.svg#phone-mw"></use>
+                </svg>
+            </div>
+
+            <label for="mail" class="label">Почта</label>
+            <div class="modal-form-item">
+                <input type="email" name="email" id="mail" class="input">
+                <svg class="modal-form-icon">
+                    <use href="./img/sprite#envelope"></use>
+                </svg>
+            </div>
+
+            <label for="text-area" class="label">Комментарий</label>
+            <textarea name="feedback" id="teat-area" class="feedback" placeholder="Введите текст"></textarea>
+
+            <input type="checkbox" name="policy" id="policy" class="policy-input">
+            <label for="policy">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+            </label>
+
+
+
+        </form>
 
     </div>
 </div>
