Фиксит кнопку-бургер + JS

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -41,6 +41,7 @@
     border: none;
     background: transparent;
     padding: 0;
+    fill: var(--white-color);
   }
 }
 @media screen and(min-width:768px) {
