--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -103,4 +103,23 @@
   border-radius: 4px;
   padding: 12px 16px;
   margin-bottom: 20px;
+  resize: none;
+  font-size: 14px;
+
+  &:hover,
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
+}
+
+.policy-label {
+  color: #757575;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+
+.policy-link {
+  color: var(--accent-color);
 }
