--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -35,11 +35,12 @@
             <label for="text-area" class="label">Комментарий</label>
             <textarea name="feedback" id="teat-area" class="feedback" placeholder="Введите текст"></textarea>
 
-            <input type="checkbox" name="policy" id="policy" class="policy-input">
-            <label for="policy">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+            <input type="checkbox" name="policy" id="policy" class="policy-input visually-hidden">
+            <label for="policy" class="policy-label">Соглашаюсь с рассылкой и принимаю <a href=""
+                    class="policy-link">Условия договора</a>
             </label>
 
-
+            <button type="submit" class="btn">Отправить</button>
 
         </form>
 
