--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -297,3 +297,75 @@
 // .contacts-input:focus .contact-form-field-item {
 //   color: #ffffff;
 // }
+
+///////   FOOTER    /////////
+
+.footer {
+  padding-top: 44px;
+  padding-bottom: 44px;
+}
+
+.container-footer {
+  display: flex;
+
+  // flex-wrap: wrap;
+  flex-direction: column-reverse;
+  // justify-content: flex-end;
+  // // align-items: stretch;
+}
+.copyright {
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.2em;
+  color: #9da4bd;
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
+
+.social-links::before {
+  display: inline-block;
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: #303030;
+  flex-shrink: 0;
+  margin-right: 40px;
+  // vertical-align: text-bottom;
+}
+
+.social-links-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.social-links-link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.2em;
+  color: #303030;
+  transition: color 250ms linear;
+  &:hover,
+  &:focus {
+    color: #ff6c00;
+  }
+}
+
+@media screen and (min-width: 728px) {
+  .footer {
+    padding-top: 56px;
+    padding-bottom: 56px;
+  }
+
+  .container-footer {
+    justify-content: space-between;
+    flex-direction: inherit;
+  }
+  .social-links {
+    margin-bottom: 0;
+  }
+}
