--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,9 +2,8 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-
-// Стили для файла с примером HTML-фрагмента
 @import './base/fonts';
+@import './base/colors';
 @import './layout/header/header';
 @import './layout/header/section-hero';
 @import './layout/index/section-product';
