fix btn, transition

--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -61,6 +61,7 @@
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
+  transition: fill 250ms linear;
   &:hover,
   &:focus {
     fill: var(--accent-color);
