--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -8,6 +8,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   transform: scale(1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
