--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -11,6 +11,8 @@
   line-height: 1.333;
   letter-spacing: 0.09em;
   text-transform: uppercase;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.send-btn {
     padding-right: 38px;
