fixed section advantages, done

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -40,7 +40,8 @@
 
     &-item {
       text-align: center;
-      width: 194px;
+      //   width: 194px;
+      width: calc(50% - 15px);
       min-height: 133px;
       padding: 20px 36px;
       background-color: #f7f7f7;
@@ -61,8 +62,18 @@
       line-height: 1.357;
       text-align: center;
       letter-spacing: 0.05em;
+      margin-bottom: 6px;
 
       color: #303030;
+
+      &-icon {
+        position: absolute;
+        top: 10px;
+        right: -16px;
+        width: 13px;
+        height: 22px;
+        fill: #ff6c00;
+      }
     }
 
     &-description {
@@ -72,6 +83,22 @@
       text-align: center;
 
       color: #303030;
+    }
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .advantages-list {
+    &-count {
+      font-size: 26px;
+    }
+
+    &-item {
+      padding: 20px 20px;
+    }
+
+    &-count-icon {
+      top: 0;
     }
   }
 }
@@ -131,13 +158,4 @@
       }
     }
   }
-}
-
-.advantages-list-count-icon {
-  position: absolute;
-  top: 10px;
-  right: -16px;
-  width: 13px;
-  height: 22px;
-  fill: #ff6c00;
 }
