--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,11 +1,11 @@
-@media scren and(min-width:320px){
-.hero-rigth-box{
+
+.hero{
     // max-width: 480px;
     background-image: url(../img/hero/hero-mob/hero-mob-03.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+    min-height: 100vh;
 }
-}
+
 
 @media screen and(max-width:767px){
     .hero-left-box{
@@ -13,5 +13,14 @@
     }
     .slick-slider{
         display: none;
+    }
+}
+
+@media screen and(min-width:768px){
+    .hero{
+        background: none;
+        & .container{
+            display: flex;
+        }
     }
 }
