--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -17,7 +17,7 @@
         margin-left: 64px;
         margin-right: auto;
 
-        & .ulist-men-item{
+        & .list-menu-item{
 
             &:not(:first-child){
             margin-left: 24px;
