Фиксит title в about и кнопку header

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -76,7 +76,7 @@
     </div>
     <div class="aboute-right">
       <p class="suptitle">о нас</p>
-      <h2 class="title about-title">Лучший Барбершоп твоего города</h2>
+      <h2 class="title light-theme-title">Лучший Барбершоп твоего города</h2>
       <ul class="right-list list">
         <li class="right-item">
           <p class="aboute-text">
