разметка формы и стилей модального окна

--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -1,9 +1,11 @@
 <div class="backdrop is-hidden" data-modal>
     <div class="modal-window">
-        <button type="button" class="modal-window-close-btn" data-modal-close></button>
-        <svg class="modal-window-close-icon">
-            <use href="./img/sprite.svg#icon-close"></use>
-        </svg>
+        <button type="button" class="modal-window-close-btn" data-modal-close>
+            <svg class="modal-window-close-icon">
+                <use href="./img/sprite.svg#icon-close"></use>
+            </svg>
+        </button>
+
         <form class="modal-form">
             <h2 class="modal-window-title">
                 Оставьте свои данные, мы вам перезвоним
@@ -28,7 +30,7 @@
             <div class="modal-form-item">
                 <input type="email" name="email" id="mail" class="input">
                 <svg class="modal-form-icon">
-                    <use href="./img/sprite#envelope"></use>
+                    <use href="./img/sprite.svg#envelope"></use>
                 </svg>
             </div>
 
