--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -24,13 +24,13 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%, -50%);
+  transform: translate(-50%, -50%);
   margin: 0 auto;
   padding: 40px;
   max-width: 450px;
   width: 95vw;
   max-height: 609px;
-  height: 100vh;
+  height: 95vh;
   overflow: scroll;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -90,6 +90,7 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 10px;
+  padding-left: 30px;
 
   &:hover,
   &:focus {
@@ -114,13 +115,52 @@
 }
 
 .policy-label {
+  display: block;
+  padding-left: 10px;
   color: #757575;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
+.policy-label::before {
+  display: inline-block;
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  margin-right: 6px;
+  vertical-align: text-top;
+
+  background-image: url(./img/sprite.svg#check);
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .policy-link {
   color: var(--accent-color);
+}
+
+.modal-form-item {
+  position: relative;
+}
+.modal-form-icon {
+  position: absolute;
+  top: 14px;
+  left: 14px;
+  width: 13px;
+  height: 13px;
+
+  .modal-form-item:hover &,
+  .modal-form-item:focus & {
+    fill: var(--accent-color);
+  }
+}
+
+.modal-form .btn {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  width: 200px;
 }
