--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,5 +1,8 @@
 .advantages {
   &-container {
+    & .title {
+      width: 430px;
+    }
     @media screen and(min-width:1200px) {
       display: flex;
       flex-direction: row-reverse;
@@ -7,37 +10,35 @@
   }
   &-description {
     margin-bottom: 44px;
-  }
-  &-title {
-    width: 450px;
-    margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 42px;
-    line-height: 49px;
-    letter-spacing: 0.05em;
-
-    color: var(--secondary-text-color);
+    max-width: 550px;
+    margin-right: auto;
   }
   &-text {
-    width: 390px;
+    max-width: 390px;
     line-height: 30px;
+    @media screen and(min-width:768px) {
+      max-width: 500px;
+    }
   }
   &-decoration {
-    max-width: 550px;
-    @media screen and(min-width:768px) {
-      margin-left: auto;
-    }
+    max-width: 490px;
+    margin-left: auto;
   }
   &-list {
     display: flex;
     flex-wrap: wrap;
   }
   &-item {
-    width: 193px;
+    width: calc(50% - 15px);
+    max-width: 193px;
     height: 133px;
-    align-items: center;
+    padding: 20px 20px;
+    @media screen and(min-width:768px) {
+      max-width: 210px;
+    }
 
     background-color: #f7f7f7;
+
     &:nth-child(even) {
       margin-top: 30px;
     }
@@ -55,7 +56,6 @@
     letter-spacing: 0.05em;
   }
   &-item-text {
-    width: 120px;
     font-weight: 600;
     font-size: 11px;
     line-height: 15px;
@@ -67,4 +67,27 @@
 }
 .plus-icon {
   position: absolute;
+  fill: #ff6c00;
+  width: 13px;
+  height: 22px;
+}
+@media screen and (max-width: 479px) {
+  .advantages {
+    &-number {
+      font-size: 30px;
+      line-height: 45px;
+    }
+    &-item-text {
+      font-size: 8px;
+      line-height: 12px;
+    }
+    &-container .title {
+      width: 100%;
+      max-width: 430px;
+    }
+  }
+  .plus-icon {
+    width: 8px;
+    height: 16px;
+  }
 }
