--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,36 +1,36 @@
 <section class="section advantages-section">
-  <div class="advantages-container">
-    <div class="container advantages-description">
+  <div class="container advantages-container">
+    <div class=" advantages-description">
       <p class="suptitle">старая традиционная школа</p>
-        <h2 class="title advantages-title">Почему приходят именно к нам?</h2>
+        <h2 class="title light-theme-title">Почему приходят именно к нам?</h2>
         <p class="advantages-text">О нас говорят только хорошее. Но лучше 
           1 раз увидеть и прочувствовать, чем 10 раз
            прочитать.</p>
     </div>
-  <div class="container advantages-decoration">
+  <div class="advantages-decoration">
     <ul class="list advantages-list">
       <li class="advantages-item">
         <span class="advantages-number">600 <svg class="plus-icon">
-          <use href="./img/sprite.svg#plus-icon" ></use>
+          <use href="./img/sprite.svg#plus-icon"></use>
         </svg> </span>
         <p class="advantages-item-text">Довольных клиентов в день</p>
       </li>
       <li class="advantages-item">
         <span class="advantages-number">50 <svg class="plus-icon">
-          <use class="plus-icon"></use>
-        </svg> </span>
+          <use href="./img/sprite.svg#plus-icon"></use>
+        </svg></span>
         <p class="advantages-item-text">Наград за отличный сервис</p>
       </li>
       <li class="advantages-item">
-        <span class="advantages-number">20 <svg class="plus-icon">
-          <use class="plus-icon"></use>
-        </svg> </span>
+        <span class="advantages-number">20<svg class="plus-icon">
+          <use href="./img/sprite.svg#plus-icon" ></use>
+        </svg></span>
         <p class="advantages-item-text">Лучших мастеров Киева</p>
       </li>
       <li class="advantages-item">
         <span class="advantages-number">100 <svg class="plus-icon">
-          <use class="plus-icon"></use>
-        </svg> </span>
+          <use href="./img/sprite.svg#plus-icon" ></use>
+        </svg></span>
         <p class="advantages-item-text">Подарков постоянным клиентам</p>
       </li class="advantages-item">
     </ul>
