--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -18,6 +18,10 @@
   pointer-events: none;
   visibility: hidden;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .mobile-menu.is-open {
