--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -23,4 +23,9 @@
             display: flex;
         }
     }
+    .hero-left-box{
+        display: block;
+        width: 159px;
+        background-color: black;
+    }
 }
