--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-    <div class="container">
+    <div class="hero-container container">
         
 
         <div class="hero-left-box">
