--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
  */
 @import './base/fonts';
 @import './base/colors';
+@import './components/container';
 @import './layout/header/header';
 @import './layout/header/section-hero';
 @import './layout/index/section-product';
