--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -28,14 +28,12 @@
     padding-top: 272px;
   }
 }
-h1.hero-title{
-  color: white;
-  margin-right: 39px;
-}
-.hero-text > p:first-child{
+.hero-text .hero-paragraph:first-child{
  margin-bottom: 20px;
 }
 .hero-title{
+  color: white;
+  margin-right: 39px;
  margin-bottom: 20px;
  font-weight: bold;
  line-height: 56px;
@@ -47,7 +45,7 @@ h1.hero-title{
    line-height: 85px;
  }
 }
-.hero-text >p:first-child::before{
+.hero-text .hero-paragraph::before{
   position: absolute;
   content: '';
   top: 50%;
