--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -7,9 +7,9 @@
         </button>
 
         <form class="modal-form">
-            <h2 class="modal-window-title">
+            <p class="modal-window-title">
                 Оставьте свои данные, мы вам перезвоним
-            </h2>
+            </p>
             <label for="name" class="label">Имя</label>
             <div class="modal-form-item">
                 <input type="text" name="user-name" id="name" class="input">
