Фиксит модалку + падинги в advantages

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -12,6 +12,9 @@
     margin-bottom: 44px;
     max-width: 550px;
     margin-right: auto;
+    @media screen and (min-width: 1200px) {
+      padding-left: 65px;
+    }
   }
   &-text {
     max-width: 390px;
@@ -21,8 +24,11 @@
     }
   }
   &-decoration {
-    max-width: 490px;
+    max-width: 460px;
     margin-left: auto;
+    @media screen and (min-width: 1200px) {
+      margin-right: 65px;
+    }
   }
   &-list {
     display: flex;
