Перезаливає деякі картинки і змінює структуру проекту і стилей

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,8 +1,8 @@
-@import './page-header';
-@import './hero';
-@import './section-products';
-@import './section-making';
-@import './section-photos';
-@import './section-contacts';
-@import './section-clients';
-@import './page-footer';
+@import './hero-header';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './contacts';
+@import './customer-reviews';
+@import './footer';
