Фиксит секцию about + title

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -34,7 +34,11 @@
               "
               media="(min-width: 768px)"
             />
-            <img src="./img/about/about-tablet-01.jpg" alt="" />
+            <img
+              src="./img/about/about-tablet-01.jpg"
+              alt="Мастер стрижет бороду"
+              class="img"
+            />
           </picture>
         </li>
         <li class="left-item">
@@ -69,14 +73,20 @@
               "
               media="(min-width: 768px)"
             />
-            <img src="./img/about/about-tablet-02.jpg" alt="" />
+            <img
+              src="./img/about/about-tablet-02.jpg"
+              alt="Мастер стрижет клиента"
+              class="img"
+            />
           </picture>
         </li>
       </ul>
     </div>
     <div class="aboute-right">
       <p class="suptitle">о нас</p>
-      <h2 class="title light-theme-title">Лучший Барбершоп твоего города</h2>
+      <h2 class="title light-theme-title about-title">
+        Лучший Барбершоп твоего города
+      </h2>
       <ul class="right-list list">
         <li class="right-item">
           <p class="aboute-text">
