Фиксит секцию prices

--- a/src/sass/layout/_prices.scss
+++ b/src/sass/layout/_prices.scss
@@ -56,6 +56,11 @@
     background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
   }
 
+  @media screen and (min-width: 768px) {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
   @media screen and (min-width: 1200px) {
     display: flex;
   }
@@ -66,17 +71,16 @@
     order: 3;
   }
 
-  @media screen and (max-width: 1199px) {
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-  }
-
   @media screen and (max-width: 767px) {
     font-size: 14px;
     line-height: 2.142;
   }
 
+  @media screen and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
   @media screen and (min-width: 1200px) {
     padding: 30px 40px;
     width: 50%;
