--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -6,6 +6,9 @@
         
     </ul>
     <div>
-        <p>Masha privet</p>
+        <p>Masha privet
+            privet
+        </p>
     </div>
+    
 </section>
