--- a/src/partials/page-header-nav.html
+++ b/src/partials/page-header-nav.html
@@ -1,10 +1,7 @@
 <nav>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><a href="http://"></a></li>
+    <li><a href="http://"></a></li>
+    sd
   </ul>
 </nav>
