Тест від Андрія

--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -29,4 +29,8 @@
       &lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt;
     </code>
   </p>
+
+  <div class="TestBranch">
+    Тестоа гілка
+  </div>
 </article>
